# plugins

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  azure-pipelines.yml  try-local.sh  try.sh
ampl_xl/: build.py
doc/: CMakeLists.txt  Doxyfile  conf.py  index.rst  requirements.txt
doc/old/: index.rst
doc/rst/: New Tab.html  amplcsv.rst  amplp.rst  ampltabl.rst  amplxl.rst  devguides.rst  eodbc.rst  mysql.rst  oracle.rst  reference.rst  sqlserver.rst  tableproxy.rst  userguides.rst
doc/source/: Doxyfile  amplcsv.rst  amplsqlite3.rst  amplxl.rst  conf.py  eodbc.rst  index.rst  mysql.rst  oracle.rst  sqlserver.rst  userguides.rst
doc/source/_html/: robots.txt
src/: CMakeLists.txt  ampl_xl.cpp  ampl_xl.hpp  ioapi.c  myunz.cpp  myunz.hpp  myzip.hpp  test.py  test_utils.py  zip.c
src/ampl_xl/solvers2/: sphes.c
src/ampl_xl/src/: myzip.cpp  unzip.c
src/amplp/examples/amplcsv/: CMakeLists.txt
src/amplp/examples/amplcsv/src/: handler.cpp  handler.hpp
src/amplp/examples/amplcsv/tests/: BalAssign2022bom.csv  testbom.run
src/amplp/examples/ampljson/: CMakeLists.txt  README.md
src/amplp/examples/ampljson/src/: handler.cpp  handler.hpp
src/amplp/examples/ampljson/test/: amt_cols.json  amt_rows.json  diet_cols.json  diet_cols_concat.json  diet_rows.json  food_cols.json  food_rows.json  nutr_cols.json  nutr_rows.json  pythonprint.py  test.run
src/amplp/examples/amplsqlite/: CMakeLists.txt
src/amplp/examples/amplsqlite/src/: handler.cpp
src/amplp/examples/amplsqlite3/: CMakeLists.txt  doc.txt
src/amplp/examples/amplsqlite3/sample/: diet_read.run  diet_update.run  diet_write.run
src/amplp/examples/amplsqlite3/src/: handler.cpp  handler.hpp
src/amplp/examples/amplsqlite3/tests/: diet_read.out  diet_read.run  diet_read_permute.out  diet_read_permute.run  diet_read_update.out  diet_read_update.run  diet_update.out  diet_update.run  diet_write.out  diet_write.run  precision.out  precision.run  tests.txt
src/amplp/examples/basic/: CMakeLists.txt
src/amplp/examples/basic/src/: handler.cpp  handler.hpp
src/amplp/examples/encode/example/: encoded.mod
src/amplp/examples/eodbc/: CMakeLists.txt
src/amplp/examples/eodbc/src/: handler.cpp  handler.hpp
src/amplp/examples/funclink/: CMakeLists.txt
src/amplp/examples/funclink/src/: funcadd.cpp  funcadd0.cpp
src/amplp/examples/funclink/tests/: temp.txt  test.run
src/amplp/examples/heuristic/: CMakeLists.txt
src/amplp/examples/heuristic/src/: funcadd.cpp  knap.cpp  knap.hpp
src/amplp/examples/heuristic/tests/: knapsack.mod  test.run
src/amplp/examples/modhide/: CMakeLists.txt
src/amplp/examples/template/: CMakeLists.txt
src/amplp/include/: amplp.hpp
src/ampltableconnector/: CMakeLists.txt
src/ampltableconnector/examples/amplcsv/: CMakeLists.txt
src/ampltableconnector/examples/basic/: CMakeLists.txt
src/ampltableconnector/examples/funclink/: CMakeLists.txt
src/ampltableconnector/examples/odbc/: CMakeLists.txt
src/ampltableconnector/examples/template/: CMakeLists.txt
src/ampltableconnector/include/: ampltableconnector.hpp
src/ampltableconnector/src/: ampl.hpp  ampltableconnector.cpp  ampltableconnector.hpp  build.py  connector.cpp  connector.hpp  includes.hpp  logger.cpp  logger.hpp  masterheader.hpp  merge.py  utils.cpp  utils.hpp
src/ampltableconnector/tests/: test_in.run  test_out.run
src/amplxl/: CMakeLists.txt  README.md  build.py  doc.txt
src/amplxl/src/: ampl_xl.cpp  ampl_xl.hpp  amplxl_doc.hpp  copyzip.cpp  copyzip.hpp  logger.cpp  logger.hpp  myunz.cpp  myunz.hpp  myzip.cpp  myzip.hpp  oxmlutils.cpp  oxmlutils.hpp  utils.cpp  utils.hpp  zip.c
src/amplxl/tests/: diet.mod  diet_in_2.run  diet_inout_1.run  diet_inout_3.xlsx  diet_inout_single_1.run  diet_out_3.run  diet_out_3.xlsx  expandrows1.run  expandrows2.out  expandrows2.run  expandrows2.xlsx  expandrows3.run  generate.py  inlinestr.run  inlinestr.xlsx  keyvaltest1.run  keyvaltest1.xlsx  keyvaltest2D1.xlsx  keyvaltestinout2.run  keyvaltestinout2.xlsx  keyvaltestinout2D1.run  keyvaltestinout2D2.run  keyvaltestinout2D2.xlsx  keyvaltestinout2D3.xlsx  keyvaltestinout3.run  shrinkrows2.run  shrinkrows2.xlsx  shrinkrows3.out  shrinkrows3.xlsx  t_links-2.xlsx  test.py  test4-1.run  testdescription.txt
src/amplxl/tests/diet_run/: diet_in_1.run  diet_in_2.out  diet_in_2.run  diet_in_3.run  diet_inout_1.out  diet_inout_1.run  diet_inout_2.out  diet_inout_2.run  diet_inout_3.out  diet_inout_3.run  diet_inout_single_1.run  diet_inout_single_2.run  diet_inout_single_3.run  diet_out_1.out  diet_out_1.run  diet_out_2.out  diet_out_2.run  diet_out_3.out  diet_out_3.run  diet_out_single_1.out  diet_out_single_1.run  diet_out_single_2.out  diet_out_single_2.run  diet_out_single_3.out  diet_out_single_3.run
src/amplxl/tests/diet_xlsx/: diet_inout_1.xlsx  diet_inout_single_2.xlsx  diet_out_1.xlsx
src/amplxl/tests/run/: diet_in_1.run  diet_in_2.run  diet_in_3.run  diet_inout_1.run  diet_inout_2.out  diet_inout_2.run  diet_inout_2.xlsx  diet_inout_3.run  diet_inout_single_1.run  diet_inout_single_2.run  diet_inout_single_3.out  diet_inout_single_3.run  diet_out_1.run  diet_out_2.run  diet_out_3.run  expandrows3.xlsx  inlinestr.run  inlinestr2D.out  inlinestr2D.run  inlinestr2D.xlsx  keyvaltest2.run  keyvaltest2D3.run  keyvaltest3.run  keyvaltest3.xlsx  keyvaltestinout1.run  keyvaltestinout3.out  notdeclared.run  notexists.run  shrinkrows1.run  shrinkrows1.xlsx  shrinkrows2.run  shrinkrows3.run  t_links-1.xlsx  t_links-3.xlsx  test4-2.out  test4-2.run  test4-3.run
src/amplxl/zlib-1.2.11/: CMakeLists.txt
src/amplxl/zlib-1.3/: CMakeLists.txt
src/solvers2/: avltree.c  fg_write.c  indic_cons.c  makefile  mqpcheckv.c  opno.hd
src/solvers2/sys.x86_64.Linux/: degree.c  xsum0.out
src/sqlite3/: handler.c
src/sqlite3/tests/: .gitignore  diet-sql-1.run  diet-sql-2.run  diet.dat.sql  output-1.txt  test-diet-1.sh  test-diet-2.sh  test.py
src/tables/: README  TABLES.RME  amplodbc.c  changes  xsum0.out
test/tables/: CMakeLists.txt  access-test.cc  csv-test.cc  excel-test.cc  odbc-test.cc  tableproxy-test.cc
(+59 files in other folders)
